# stdx

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: asan.yml  build.yml  ci.yml  clang-tidy.yml  cmake-multi-platform.yml  coverage-badge.yml  coverage.yml  doxygen.yml  main-ci.yml
include/stdads/: Array.h  Ctype.h  IComparable.h  IEquatable.h  Iterator.h  IteratorBase.h  NumUtils.h  Stdadslib.h  Stopwatch.h  String.h  array.h  comparable.h  ctype.h  equatable.h  iterator.h  math.h  num_utils.h  stdadslib.h  stopwatch.h  string.h
include/stdx/: array.h  array_list.h  comparable.h  container.h  contiguous_container.h  ctype.h  equatable.h  fixed_array_list.h  iterator.h  math.h  memory.h  num_utils.h  stdxlib.h  stopwatch.h  string.h  vector.h
src/: CMakeLists.txt  Ctype.cpp  Stdadslib.cpp  Stopwatch.cpp  String.cpp  ctype.cpp  math.cpp  stdadslib.cpp  stdxlib.cpp  stopwatch.cpp  string.cpp
src/lint/: CMakeLists.txt  all_headers.cpp
tests/: CMakeLists.txt  TestArray.cpp  TestCtype.cpp  TestIterator.cpp  TestNumUtils.cpp  TestStdadslib.cpp  TestStopwatch.cpp  TestString.cpp  test_array.cpp  test_array_list.cpp  test_ctype.cpp  test_fixed_array_list.cpp  test_iterator.cpp  test_math.cpp  test_memory.cpp  test_num_utils.cpp  test_stdadslib.cpp  test_stdxlib.cpp  test_stopwatch.cpp  test_string.cpp  test_vector.cpp
